<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="task1.yalantis.com.task1.MainActivity">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/organizationType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoText="false"
                    android:clickable="true"
                    android:text="@string/organizationType"
                    android:textColor="#020200"
                    android:textSize="23sp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView

                    android:text="@string/workStatus"
                    style="@style/WorkingStatusText"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:padding="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:id="@+id/workStatus" />
            </LinearLayout>

            <LinearLayout style="@style/LineLayouts">

                <TextView
                    style="@style/LeftColumnStyle"
                    android:text="@string/CreationText"
                    android:id="@+id/CreationText" />

                <TextView
                    style="@style/RightColumnStyle"
                    android:text="@string/DateOfCreation"
                    android:id="@+id/DateOfCreation" />

            </LinearLayout>

            <LinearLayout style="@style/LineLayouts">

                <TextView
                    style="@style/LeftColumnStyle"
                    android:text="@string/registrationText"
                    android:id="@+id/registrationText" />


                <TextView
                    style="@style/RightColumnStyle"
                    android:text="@string/registrationDate"
                    android:id="@+id/registrationDate" />

            </LinearLayout>

            <LinearLayout style="@style/LineLayouts">

                <TextView
                    style="@style/LeftColumnStyle"
                    android:text="@string/executeBeforeText"
                    android:id="@+id/executeBeforeText" />

                <TextView
                    style="@style/RightColumnStyle"
                    android:text="@string/executeBeforeDate"
                    android:id="@+id/executeBeforeDate" />

            </LinearLayout>

            <LinearLayout style="@style/LineLayouts">

                <TextView
                    style="@style/LeftColumnStyle"
                    android:text="@string/responsibleText"
                    android:id="@+id/responsibleText" />

                <TextView
                    style="@style/RightColumnStyle"
                    android:text="@string/responsible"
                    android:id="@+id/responsible" />

            </LinearLayout>

            <LinearLayout  style="@style/LineLayouts">

                <TextView
                    style="@style/LeftColumnStyle"
                    android:gravity="fill_horizontal"
                    android:textColor="#000000"
                    android:text="@string/describe"
                    android:id="@+id/describe"
                    android:layout_gravity="top|center_horizontal" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:layout_below="@+id/scrollView"
        android:layout_centerHorizontal="true" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <ImageView
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="left"
                android:padding="5dp" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="right"
                android:padding="5dp" />

        </LinearLayout>
    </HorizontalScrollView>


</RelativeLayout>
